force-app/main/default/objects/Order_Grid__c/Order_Grid__c.object-meta.xml
<CustomObject>
    <description>Used to manage frequently ordered products</description>
    <label>Order Grid</label>
    <nameField>
        <label>Order Grid Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order Grids</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>