force-app/main/default/objects/Order_Grid__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Account which made these Orders</description>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Order Grids</relationshipLabel>
    <relationshipName>Order_Grids</relationshipName>
    <type>Lookup</type>
</CustomField>