force-app/main/default/objects/Order_Grid__c/fields/Avg_Of_Orders__c.field-meta.xml
<CustomField>
    <fullName>Avg_Of_Orders__c</fullName>
    <description>Average of last 6 orders</description>
    <formula>( Order1__c +  Order2__c +  Order3__c +  Order4__c +  Order5__c +  Order6__c ) / 6</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Average of last 6 orders</inlineHelpText>
    <label>Avg Of Orders</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>