force-app/main/default/objects/Order_Grid__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <description>Product Code</description>
    <label>Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>