force-app/main/default/objects/Order_Grid__c/fields/Default_Order__c.field-meta.xml
<CustomField>
    <fullName>Default_Order__c</fullName>
    <description>Default Quantity of order</description>
    <label>Default Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>