force-app/main/default/objects/Order_Grid__c/fields/Order1__c.field-meta.xml
<CustomField>
    <fullName>Order1__c</fullName>
    <inlineHelpText>First of the last 6 Orders Invoiced</inlineHelpText>
    <label>Order1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>