force-app/main/default/objects/Order_Grid__c/fields/Order1_Date__c.field-meta.xml
<CustomField>
    <fullName>Order1_Date__c</fullName>
    <label>Order1_Date</label>
    <type>Date</type>
</CustomField>