force-app/main/default/objects/Order_Grid__c/fields/Order2__c.field-meta.xml
<CustomField>
    <fullName>Order2__c</fullName>
    <description>Second of the last 6 Odrers Invoiced</description>
    <label>Order2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>