force-app/main/default/objects/Order_Grid__c/fields/Order2_Date__c.field-meta.xml
<CustomField>
    <fullName>Order2_Date__c</fullName>
    <description>This is the date for Order 2. This field is to be displayed on the Grid header.</description>
    <label>Order2 Date</label>
    <type>DateTime</type>
</CustomField>