force-app/main/default/objects/Order_Grid__c/fields/Order3__c.field-meta.xml
<CustomField>
    <fullName>Order3__c</fullName>
    <description>Third of the last 6 Orders Invoiced</description>
    <label>Order3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>