force-app/main/default/objects/Order_Grid__c/fields/Order3_Date__c.field-meta.xml
<CustomField>
    <fullName>Order3_Date__c</fullName>
    <label>Order3_Date</label>
    <type>Date</type>
</CustomField>