force-app/main/default/objects/Order_Grid__c/fields/Order_Pending_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Pending_Date__c</fullName>
    <label>Order Pending Date</label>
    <type>Date</type>
</CustomField>