force-app/main/default/objects/Order_Grid__c/fields/Order_Required__c.field-meta.xml
<CustomField>
    <fullName>Order_Required__c</fullName>
    <label>Order Required</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>