force-app/main/default/objects/Order_Grid__c/fields/OrderPending__c.field-meta.xml
<CustomField>
    <fullName>OrderPending__c</fullName>
    <description>Pending Order quantity.</description>
    <label>OrderPending</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>