force-app/main/default/objects/Order_Grid__c/fields/Pack_Size__c.field-meta.xml
<CustomField>
    <fullName>Pack_Size__c</fullName>
    <label>Pack Size</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>