force-app/main/default/objects/Order_Grid__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <description>Product Price</description>
    <label>Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>