force-app/main/default/objects/Order_Grid__c/fields/Total_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Price__c</fullName>
    <description>Total Price is unit price multiplied with quantity.</description>
    <label>Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>