force-app/main/default/objects/Order_Grid__c/fields/Total_Price_Formula__c.field-meta.xml
<CustomField>
    <fullName>Total_Price_Formula__c</fullName>
    <formula>Price__c  *  Order_Required__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>