force-app/main/default/objects/Order_Grid__c/fields/Total_Weight__c.field-meta.xml
<CustomField>
    <fullName>Total_Weight__c</fullName>
    <description>This is product unit weight multiplied by quantity being ordered.</description>
    <label>Total Weight</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>