force-app/main/default/objects/Order_Grid__c/fields/Total_Weight_Formula__c.field-meta.xml
<CustomField>
    <fullName>Total_Weight_Formula__c</fullName>
    <formula>TEXT( Pack_Size__c *  Order_Required__c )+&apos;kg&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Weight</label>
    <type>Text</type>
</CustomField>