force-app/main/default/objects/Order_Grid__c/fields/Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>Unique_Key__c</fullName>
    <externalId>true</externalId>
    <label>Unique Key</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>