force-app/main/default/objects/Order_Grid__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Order1_Date__c</columns>
    <columns>Order2_Date__c</columns>
    <columns>Order3_Date__c</columns>
    <columns>Order4_Date__c</columns>
    <columns>Order5_Date__c</columns>
    <columns>Order6_Date__c</columns>
    <columns>Price__c</columns>
    <columns>Product__c</columns>
    <columns>Pack_Size__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>